More playing around

--- a/hello-world.html
+++ b/hello-world.html
@@ -8,7 +8,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Interlock Rochester</title>
+        <title>Interlock Rochester Sitename</title>
 
 
         <!-- Bootstrap Core CSS -->
@@ -38,7 +38,7 @@
 
 
 			<meta property="og:locale" content="en">
-		<meta property="og:site_name" content="Interlock Rochester">
+		<meta property="og:site_name" content="Interlock Rochester Sitename">
 
 	<meta property="og:type" content="article">
 	<meta property="article:author" content="">
@@ -62,7 +62,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">Interlock Rochester</a>
+                <a class="navbar-brand" href="/">Interlock Rochester Sitename</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -118,7 +118,7 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <ul class="list-inline text-center">
                         <li>
-                            <a href="">
+                            <a href="https://twitter.com/interlockroc">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
@@ -126,15 +126,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="">
-                                <span class="fa-stack fa-lg">
-                                    <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                                </span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
+                            <a href="https://github.com/Interlock-Rochester">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-github fa-stack-1x fa-inverse"></i>
