--- a/hello-world.html
+++ b/hello-world.html
@@ -8,7 +8,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Interlock Rochester Sitename</title>
+        <title>Interlock Rochester</title>
 
 
         <!-- Bootstrap Core CSS -->
@@ -38,7 +38,7 @@
 
 
 			<meta property="og:locale" content="en">
-		<meta property="og:site_name" content="Interlock Rochester Sitename">
+		<meta property="og:site_name" content="Interlock Rochester">
 
 	<meta property="og:type" content="article">
 	<meta property="article:author" content="">
@@ -62,7 +62,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">Interlock Rochester Sitename</a>
+                <a class="navbar-brand" href="/">Interlock Rochester</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
