Added about page, added now pic for posts

--- a/archives.html
+++ b/archives.html
@@ -82,6 +82,8 @@
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
     <dl>
             <dt>Thu 09 March 2017</dt>
+            <dd><a href="/about.html">About</a></dd>
+            <dt>Thu 09 March 2017</dt>
             <dd><a href="/hello-world.html">Hello World</a></dd>
             <dt>Wed 08 March 2017</dt>
             <dd><a href="/another-post.html">Another Post!</a></dd>
