Update website to hash: 8479f2e88d10c42281db28b8832985191ee1f8ac

--- a/hacksite.html
+++ b/hacksite.html
@@ -106,7 +106,7 @@
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
     <!-- Post Content -->
     <article>
-        <p>If you're a regular viewer of our website, you'll notice that it's
+        <p>If you're a regular visitor of our website, you'll notice that it's
 been going through some changes but it still doesn't reflect what's
 been happening in the space. We're going to change that.</p>
 <p>This coming Tuesday, we'll be holding a website hackathon to get
