--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         <div class="container text-center g-width-780 g-color-gray-light-v2 g-mb-60">
           <div class="text-uppercase u-heading-v2-4--bottom g-brd-primary g-mb-40">
             <h4 class="h6 g-font-weight-800 g-font-size-12 g-letter-spacing-2 g-color-primary g-mb-20">Events</h4>
-            <h2 class="h1 u-heading-v2__title g-line-height-1_3 g-font-weight-600 g-font-size-40 g-color-white g-mb-minus-10">Up Comming Events</h2>
+            <h2 class="h1 u-heading-v2__title g-line-height-1_3 g-font-weight-600 g-font-size-40 g-color-white g-mb-minus-10">Upcoming Events</h2>
           </div>
           <iframe width="475" height="389" src="https://meetu.ps/3fCqmd" frameborder="0"></iframe>
         </div>
