Updated rates, cleaned up the pages a bit, reworded some awkward copy

--- a/index.html
+++ b/index.html
@@ -62,9 +62,10 @@
                   <li class="nav-item g-mx-10--lg g-mx-15--xl g-mb-7 g-mb-0--lg">
                     <a href="#events" class="nav-link g-color-white p-0">Events</a>
                   </li>
+                  <!-- 
                   <li class="nav-item g-mx-10--lg g-mx-15--xl g-mb-7 g-mb-0--lg">
                     <a href="#projects" class="nav-link g-color-white p-0">Projects</a>
-                  </li>
+                  </li> -->
 				  <li class="nav-item g-mx-10--lg g-mx-15--xl g-mb-7 g-mb-0--lg">
                     <a href="blog/index.html" class="nav-link g-color-white p-0">Blog</a>
                   </li>
@@ -141,9 +142,8 @@
           <div class="col-md-6 col-lg-4 g-flex-centered g-theme-bg-blue-dark-v1">
             <div class="text-center g-color-gray-light-v2 g-pa-30">
               <div class="text-uppercase u-heading-v2-4--bottom g-brd-primary g-mb-40">
-                <h4 class="h6 g-font-weight-800 g-font-size-12 g-letter-spacing-2 g-color-primary g-mb-20">About us</h4>
-                <h2 class="h1 u-heading-v2__title g-line-height-1_3 g-font-weight-600 g-font-size-40 g-color-white g-mb-minus-10">Help make
-                  <br> your projects</h2>
+                <h4 class="h6 g-font-weight-800 g-font-size-12 g-letter-spacing-2 g-color-primary g-mb-20">A little bit about</h4>
+                <h2 class="h1 u-heading-v2__title g-line-height-1_3 g-font-weight-600 g-font-size-40 g-color-white g-mb-minus-10">Who We Are</h2>
               </div>
 
               <p class="g-color-gray-light-v2 mb-0">Interlock Rochester is a 501(c)3 non-profit Hackerspace whose goal is to provide a physical space and community to its members and the public at large. We provide workshops, classes, and a community of hackers with a wide range of interests: 3D Printing, information security, electronics, micro-controllers, laser cutting, radios, programming, networking, and much more that falls on the geek spectrum.</p>
@@ -196,18 +196,23 @@
       <section id="events" class="g-theme-bg-blue-dark-v1 g-py-80">
         <div class="container text-center g-width-780 g-color-gray-light-v2 g-mb-60">
           <div class="text-uppercase u-heading-v2-4--bottom g-brd-primary g-mb-40">
-            <h4 class="h6 g-font-weight-800 g-font-size-12 g-letter-spacing-2 g-color-primary g-mb-20">Events</h4>
-            <h2 class="h1 u-heading-v2__title g-line-height-1_3 g-font-weight-600 g-font-size-40 g-color-white g-mb-minus-10">Up Coming Events</h2>
+            <h4 class="h6 g-font-weight-800 g-font-size-12 g-letter-spacing-2 g-color-primary g-mb-20">Join us at some</h4>
+            <h2 class="h1 u-heading-v2__title g-line-height-1_3 g-font-weight-600 g-font-size-40 g-color-white g-mb-minus-10">Upcoming Events</h2>
           </div>
           <iframe width="475" height="389" src="https://meetu.ps/3fCqmd" frameborder="0"></iframe>
         </div>
           <div class="text-center">
-            <p class="g-color-gray-light-v2 g-mb-35 "><h4 class="h6 g-font-weight-800 g-font-size-12 g-letter-spacing-2 g-mb-20 g-color-gray-light-v2">"Open Night" every first Tuesday of the month from 7-10pm (Members are also at the space every Tuesday)</h4></p>
+            <p class="g-color-gray-light-v2 g-mb-35 ">
+              <h4 class="h6 g-font-weight-800 g-font-size-12 g-letter-spacing-2 g-mb-20 g-color-gray-light-v2">"Open Night" is every first Tuesday of the month from 7-10pm 
+                <br/>
+              Our doors are also open for you on other Tuesdays as well!
+            </h4></p>
           </div>
       </section>
       <!-- End Section Content -->
 
       <!-- Section Content -->
+<!-- removed for now...
       <section id="projects" class="g-pt-115 g-pb-80">
         <div class="container">
           <div class="row">
@@ -329,6 +334,7 @@
           </div>
         </div>
       </section>
+END removed for now -->
       <!-- End Section Content -->
 
       <!-- Info Blocks -->
@@ -339,7 +345,7 @@
 
         <div class="col-xl-7 col-lg-8 g-theme-bg-blue-dark-v1 g-pt-100 g-pb-80 g-px-15 g-px-40--md">
           <header class="text-uppercase u-heading-v2-4--bottom g-brd-primary g-mb-40">
-            <h4 class="h6 g-font-weight-800 g-font-size-12 g-letter-spacing-2 g-color-primary g-mb-20">How we work</h4>
+            <h4 class="h6 g-font-weight-800 g-font-size-12 g-letter-spacing-2 g-color-primary g-mb-20">What is ourf</h4>
             <h2 class="h1 u-heading-v2__title g-line-height-1_3 g-font-weight-600 g-font-size-40 g-color-white g-mb-minus-10">Hackerspace</h2>
           </header>
 
@@ -393,13 +399,13 @@ Members often work in teams to complete their projects. If you have a project yo
         <div class="container">
           <div class="container text-center g-width-780 g-mb-60">
             <div class="text-uppercase u-heading-v2-4--bottom g-brd-primary g-mb-45">
-              <h4 class="h6 g-font-weight-800 g-font-size-12 g-letter-spacing-2 g-color-primary g-mb-20">Membership</h4>
-              <h2 class="h1 u-heading-v2__title g-line-height-1_3 g-font-weight-600 g-font-size-40 g-mb-minus-10">Membership Benefits</h2>
+              <!-- h4 class="h6 g-font-weight-800 g-font-size-12 g-letter-spacing-2 g-color-primary g-mb-20">Membership</h4 -->
+              <h2 class="h1 u-heading-v2__title g-line-height-1_3 g-font-weight-600 g-font-size-40 g-mb-minus-10">Become a Member</h2>
             </div>
 
             <p class="mb-0">If the idea of a hackerspace interests you, we welcome you to become involved in our community. You do not have to pay dues to get involved with Interlock events and activities. Spend some time at Interlock during our open nights, get to know other members, and if you decide membership is right for you, let us know!</p>
           
-				<div class="g-color-primary g-my-20"><strong class="d-block g-font-size-30 g-line-height-1_2">Full Membership: $50</strong>per month</div>
+				<div class="g-color-primary g-my-20"><strong class="d-block g-font-size-30 g-line-height-1_2">Full Membership: $60</strong>per month</div>
                   <ul class="list-unstyled g-mb-25">
                     <li class="g-brd-bottom g-brd-gray-light-v3 g-py-12">Key fob for 24×7 access to the space</li>
                     <li class="g-brd-bottom g-brd-gray-light-v3 g-py-12">Access to electronics bench and tools (e.g. soldering iron, oscilloscope)</li>
@@ -415,7 +421,7 @@ Members often work in teams to complete their projects. If you have a project yo
 				  <div class="u-divider u-divider-solid u-divider-center g-brd-gray-dark-v2 w-75 mx-auto g-my-80">
 					<i class="fa fa-angle-down u-divider__icon g-bg-gray-dark-v2 g-color-white rounded-circle"></i>
 				</div>
-				  <div class="g-color-primary g-my-20"><strong class="d-block g-font-size-30 g-line-height-1_2">Student $35</strong>per month</div>
+				  <div class="g-color-primary g-my-20"><strong class="d-block g-font-size-30 g-line-height-1_2">Student $40</strong>per month</div>
 				  <ul class="list-unstyled g-mb-25">
 				  <li class="g-brd-bottom g-brd-gray-light-v3 g-py-12">All of the above rights of a full member</li>
 				  <li class="g-brd-bottom g-brd-gray-light-v3 g-py-12">Must be enrolled currently in school (Collage, High School, Grade School)</li>
@@ -424,7 +430,7 @@ Members often work in teams to complete their projects. If you have a project yo
 				<div class="u-divider u-divider-solid u-divider-center g-brd-gray-dark-v2 w-75 mx-auto g-my-80">
 					<i class="fa fa-angle-down u-divider__icon g-bg-gray-dark-v2 g-color-white rounded-circle"></i>
 				</div>
-				 <div class="g-color-primary g-my-20"><strong class="d-block g-font-size-30 g-line-height-1_2">Table Hacker $100</strong>per month</div>
+				 <div class="g-color-primary g-my-20"><strong class="d-block g-font-size-30 g-line-height-1_2">Table Hacker $120</strong>per month</div>
                   <ul class="list-unstyled g-mb-25">
                     <li class="g-brd-bottom g-brd-gray-light-v3 g-py-12">All of the above rights of a full member</li>
                     <li class="g-brd-bottom g-brd-gray-light-v3 g-py-12">A dedicate desk, chair, power and Internet hookup</li>
@@ -433,65 +439,106 @@ Members often work in teams to complete their projects. If you have a project yo
 					
       </div></section>
       <!-- End Pricing Table -->
+
+
+
       <footer>
         <div id="contact" class="text-center g-color-gray-light-v2 g-theme-bg-blue-dark-v1 g-py-80">
           <div class="container g-width-780 g-mb-60">
             <div class="text-uppercase u-heading-v2-4--bottom g-brd-primary g-mb-45">
-              <h4 class="h6 g-font-weight-800 g-font-size-12 g-letter-spacing-2 g-color-primary g-mb-20">Contact</h4>
-              <h2 class="h1 u-heading-v2__title g-line-height-1_3 g-font-weight-600 g-font-size-40 g-color-gray-light-v2 g-mb-minus-10">Our contacts</h2>
+              <!-- h4 class="h6 g-font-weight-800 g-font-size-12 g-letter-spacing-2 g-color-primary g-mb-20">Contact</h4 -->
+              <h2 class="h1 u-heading-v2__title g-line-height-1_3 g-font-weight-600 g-font-size-40 g-color-gray-light-v2 g-mb-minus-10">Contact Us</h2>
             </div>
 
-            <p class="g-color-gray-light-v2 mb-0">If you are interested in joining, come on by to the "Open Night" every first Tuesday of the month, elsewise come hang out on the IRC channel to get to know everyone.</p>
+            <p class="g-color-gray-light-v2 mb-0">If you are interested in joining, please join us at 
+            our Open Night, on the first Tuesday of each month, or come hang out with us on our IRC channel 
+            to get to know everyone.</p>
           </div>
 
           <div class="container">
             <div class="row">
+
               <div class="col-sm-6 col-md-3 g-px-15 g-py-30 g-py-0--md">
-                <i class="icon-globe d-inline-block g-font-size-50 g-color-primary g-mb-20"></i>
-                <h3 class="text-uppercase g-font-size-default g-color-white-opacity-0_5 g-letter-spacing-1 g-mb-5">Address</h3>
-                <strong class="g-font-size-default g-color-white">1115 E Main St, Rochester, NY 14609</strong>
+                <a class="g-font-size-default g-color-white" href="https://goo.gl/maps/yoj1vMCssum">
+                  <i class="icon-globe d-inline-block g-font-size-50 g-color-primary g-mb-20"></i>
+                  <h3 class="text-uppercase g-font-size-default g-color-white-opacity-0_5 g-letter-spacing-1 g-mb-5">Address</h3>
+                  <strong class="g-font-size-default g-color-white">1115 E Main St, Rochester, NY 14609</strong>
+                </a>
               </div>
 
               <div class="col-sm-6 col-md-3 g-brd-top g-brd-top-none g-brd-left--md g-brd-primary g-px-15 g-py-30 g-py-0--md">
-                <i class="icon-call-in d-inline-block g-font-size-50 g-color-primary g-mb-20"></i>
-                <h3 class="text-uppercase g-font-size-default g-color-white-opacity-0_5 g-letter-spacing-1 g-mb-5">Phone number</h3>
-                <strong class="g-font-size-default g-color-white">(585) 210-8425</strong>
+                <a class="g-font-size-default g-color-white" href="tel://5852108425">
+                  <i class="icon-call-in d-inline-block g-font-size-50 g-color-primary g-mb-20"></i>
+                  <h3 class="text-uppercase g-font-size-default g-color-white-opacity-0_5 g-letter-spacing-1 g-mb-5">Phone number</h3>
+                  <strong class="g-font-size-default g-color-white">(585) 210-8425</strong>
+                </a>
               </div>
 
               <div class="col-sm-6 col-md-3 g-brd-top g-brd-top-none g-brd-left--md g-brd-primary g-px-15 g-py-30 g-py-0--md">
-                <i class="icon-envelope d-inline-block g-font-size-50 g-color-primary g-mb-20"></i>
-                <h3 class="text-uppercase g-font-size-default g-color-white-opacity-0_5 g-letter-spacing-1 g-mb-5">Email</h3>
-                <a class="g-font-size-default g-color-white" href="mailto:info@interlockroc.org"><strong>info@interlockroc.org</strong></a>
+                <a class="g-font-size-default g-color-white" href="mailto:info@interlockroc.org">
+                  <i class="icon-envelope d-inline-block g-font-size-50 g-color-primary g-mb-20"></i>
+                  <h3 class="text-uppercase g-font-size-default g-color-white-opacity-0_5 g-letter-spacing-1 g-mb-5">Email</h3>
+                  <strong>info@interlockroc.org</strong>
+                </a>
               </div>
 
               <div class="col-sm-6 col-md-3 g-brd-top g-brd-top-none g-brd-left--md g-brd-primary g-px-15 g-py-30 g-py-0--md">
-                <i class="icon-speech d-inline-block g-font-size-50 g-color-primary g-mb-20"></i>
-                <h3 class="text-uppercase g-font-size-default g-color-white-opacity-0_5 g-letter-spacing-1 g-mb-5">IRC</h3>
-                <strong class="g-font-size-default g-color-white"><a class="g-font-size-default g-color-white" href="http://webchat.freenode.net?channels=%23interlock&uio=d4">freenode/#interlock</a></strong>
+                <a class="g-font-size-default g-color-white" href="http://webchat.freenode.net?channels=%23interlock&uio=d4">
+                  <i class="icon-speech d-inline-block g-font-size-50 g-color-primary g-mb-20"></i>
+                  <h3 class="text-uppercase g-font-size-default g-color-white-opacity-0_5 g-letter-spacing-1 g-mb-5">IRC</h3>
+                  <strong class="g-font-size-default g-color-white">freenode/#interlock</strong>
+                </a>
               </div>
+
             </div>
           </div>
+          <hr/>
+          <div class="row">
+            <div class="container g-width-780 g-mb-60 col-sm-4 col-md-4 g-brd-left--md g-brd-right--md">
+              <a class="g-font-size-default g-color-white" href="https://form.jotform.com/81564315839161">
+
+                <span class=" d-inline-block g-font-size-50 g-color-primary g-mb-20">$</span>
+                <h3 class="text-uppercase g-font-size-default g-color-white-opacity-0_5 g-letter-spacing-1 g-mb-5">Donate</h3>
+
+
+                <p class="g-color-gray-light-v2 mb-0">
+                  Perhaps you'd like to donate to us?
+                  <br/>
+                  We've set up an online form so that
+                  you can donate to us right now! 
+                  We are a 501(c)3 non-profit organization, and we welcome
+                  additional donations on top of our members' payments, as it enables us to do more.
+                </p>
+              </a>
+            </div>
+          </div>
+
         </div>
 
         <!-- Icon Blocks -->
-        <ul class="row no-gutters list-inline g-mb-0">
+        <ul class="row no-gutters list-inline g-mb-0 ">
           <li class="col list-inline-item g-mr-0">
-            <a class="d-block g-theme-bg-blue-dark-v3 g-color-gray-dark-v5 g-bg-primary--hover g-color-white--hover g-font-size-default text-center g-pa-15" href="https://twitter.com/interlockroc">
+            <a class="d-block g-theme-bg-blue-dark-v3 g-color-gray-dark-v5 g-bg-primary--hover g-color-white--hover g-font-size-30 text-center g-pa-15" href="https://twitter.com/interlockroc">
               <i class="fa fa-twitter"></i>
             </a>
           </li>
           <li class="col list-inline-item g-mr-0">
-            <a class="d-block g-theme-bg-blue-dark-v2 g-color-gray-dark-v5 g-bg-primary--hover g-color-white--hover g-font-size-default text-center g-pa-15" href="https://www.meetup.com/Interlock-Rochester-Hackerspace">
+            <a class="d-block g-theme-bg-blue-dark-v2 g-color-gray-dark-v5 g-bg-primary--hover g-color-white--hover g-font-size-30 text-center g-pa-15" href="https://www.facebook.com/Interlock-Rochester-198421751824">
+              <i class="fa fa-facebook"></i>
+            </a>
+          </li>
+          <li class="col list-inline-item g-mr-0">
+            <a class="d-block g-theme-bg-blue-dark-v3 g-color-gray-dark-v5 g-bg-primary--hover g-color-white--hover g-font-size-30 text-center g-pa-15" href="https://www.meetup.com/Interlock-Rochester-Hackerspace">
               <i class="fa fa-meetup"></i>
             </a>
           </li>
           <li class="col list-inline-item g-mr-0">
-            <a class="d-block g-theme-bg-blue-dark-v3 g-color-gray-dark-v5 g-bg-primary--hover g-color-white--hover g-font-size-default text-center g-pa-15" href="https://github.com/Interlock-Rochester">
+            <a class="d-block g-theme-bg-blue-dark-v2 g-color-gray-dark-v5 g-bg-primary--hover g-color-white--hover g-font-size-30 text-center g-pa-15" href="https://github.com/Interlock-Rochester">
               <i class="fa fa-github"></i>
             </a>
           </li>
           <li class="col list-inline-item g-mr-0">
-            <a class="d-block g-theme-bg-blue-dark-v2 g-color-gray-dark-v5 g-bg-primary--hover g-color-white--hover g-font-size-default text-center g-pa-15" href="https://www.flickr.com/groups/interlock_roc/">
+            <a class="d-block g-theme-bg-blue-dark-v3 g-color-gray-dark-v5 g-bg-primary--hover g-color-white--hover g-font-size-30 text-center g-pa-15" href="https://www.flickr.com/groups/interlock_roc/">
               <i class="fa fa-flickr"></i>
             </a>
           </li>
@@ -499,6 +546,7 @@ Members often work in teams to complete their projects. If you have a project yo
         <!-- End Icon Blocks -->
 
         <!-- Google (Map) [custom] -->
+<!-- no api key for us, and a link will suffice
         <div class="g-pos-rel g-height-500">
           <div id="gMap10" class="js-g-map g-pos-abs w-100 h-100"
                data-type="custom"
@@ -514,10 +562,11 @@ Members often work in teams to complete their projects. If you have a project yo
                data-pin="true"
                data-pin-icon="assets/img/pin.png"></div>
         </div>
+-->
         <!-- End Google (Map) [custom] -->
 
-        <div class="text-center g-color-gray-dark-v3 g-pa-30">
-        </div>
+        <!-- div class="text-center g-color-gray-dark-v3 g-pa-30">
+        </div -->
       </footer>
 
       <a class="js-go-to u-go-to-v1" href="#!"
@@ -585,6 +634,6 @@ Members often work in teams to complete their projects. If you have a project yo
       });
     </script>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtt1z99GtrHZt_IcnK-wryNsQ30A112J0&callback=initMap" async></script>
+    <!-- script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtt1z99GtrHZt_IcnK-wryNsQ30A112J0&callback=initMap" async></script> -->
   </body>
 </html>
