--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ END removed for now -->
 
         <div class="col-xl-7 col-lg-8 g-theme-bg-blue-dark-v1 g-pt-100 g-pb-80 g-px-15 g-px-40--md">
           <header class="text-uppercase u-heading-v2-4--bottom g-brd-primary g-mb-40">
-            <h4 class="h6 g-font-weight-800 g-font-size-12 g-letter-spacing-2 g-color-primary g-mb-20">What is ourf</h4>
+            <h4 class="h6 g-font-weight-800 g-font-size-12 g-letter-spacing-2 g-color-primary g-mb-20">What is our</h4>
             <h2 class="h1 u-heading-v2__title g-line-height-1_3 g-font-weight-600 g-font-size-40 g-color-white g-mb-minus-10">Hackerspace</h2>
           </header>
 
@@ -368,7 +368,7 @@ END removed for now -->
               <article class="h-100 g-flex-middle g-brd-left g-brd-3 g-brd-primary g-brd-white--hover g-theme-bg-blue-dark-v2 g-transition-0_3 g-pa-20">
                 <div class="g-flex-middle-item">
                   <h4 class="h6 g-color-white g-font-weight-600 text-uppercase g-mb-10">The knowledge you want</h4>
-                  <p class="g-color-white-opacity-0_7 mb-0">Dedicated classes on severial subjects and a community of helpful members in several fields </p>
+                  <p class="g-color-white-opacity-0_7 mb-0">Dedicated classes on several subjects and a community of helpful members in several fields </p>
                 </div>
               </article>
               <!-- End Article -->
