fixing directions on how to become a member. Adding door specific details.

--- a/index.html
+++ b/index.html
@@ -403,7 +403,14 @@ Members often work in teams to complete their projects. If you have a project yo
               <h2 class="h1 u-heading-v2__title g-line-height-1_3 g-font-weight-600 g-font-size-40 g-mb-minus-10">Become a Member</h2>
             </div>
 
-            <p class="mb-0">If the idea of a hackerspace interests you, we welcome you to become involved in our community. You do not have to pay dues to get involved with Interlock events and activities. Spend some time at Interlock during our open nights, get to know other members, and if you decide membership is right for you, let us know!</p>
+            <p class="mb-0">If the idea of a hackerspace interests you, 
+	    we welcome you to become involved in our community. 
+	    You do not have to pay dues to get involved with Interlock events and activities. 
+	    If you're interested in supporting Interlock by being a member,
+	    Please attend our weekly Tuesday meeting and speak to one of 
+	    our directors. You can also email them at <a href="mailto:info@interlockroc.org">info@interlockroc.org</a> if you have any questions.</p>
+
+
           
 				<div class="g-color-primary g-my-20"><strong class="d-block g-font-size-30 g-line-height-1_2">Full Membership: $60</strong>per month</div>
                   <ul class="list-unstyled g-mb-25">
@@ -458,21 +465,21 @@ Members often work in teams to complete their projects. If you have a project yo
           <div class="container">
             <div class="row">
 
-              <div class="col-sm-6 col-md-3 g-px-15 g-py-30 g-py-0--md">
+              <div class="col-sm-5 col-md-3 g-px-15 g-py-30 g-py-0--md">
                 <a class="g-font-size-default g-color-white" href="https://www.google.com/maps/place/Interlock+Rochester/@43.1614845,-77.5834106,19.25z/data=!4m5!3m4!1s0x89d6b5978d056919:0x45b15d4cc71182c1!8m2!3d43.1614494!4d-77.5834932">
                   <i class="icon-globe d-inline-block g-font-size-50 g-color-primary g-mb-20"></i>
                   <h3 class="text-uppercase g-font-size-default g-color-white-opacity-0_5 g-letter-spacing-1 g-mb-5">Address</h3>
-                  <strong class="g-font-size-default g-color-white">1115 E Main St, Door #7, Rochester, NY 14609</strong>
+		  <strong class="g-font-size-default g-color-white">1115 E Main St, Door #7,<br/> Rochester, NY 14609</strong>
                 </a>
               </div>
 
-              <div class="col-sm-6 col-md-3 g-brd-top g-brd-top-none g-brd-left--md g-brd-primary g-px-15 g-py-30 g-py-0--md">
+             <div class="col-sm-6 col-md-3 g-brd-top g-brd-top-none g-brd-left--md g-brd-primary g-px-15 g-py-30 g-py-0--md">
                 <a class="g-font-size-default g-color-white" href="tel://5852108425">
                   <i class="icon-call-in d-inline-block g-font-size-50 g-color-primary g-mb-20"></i>
                   <h3 class="text-uppercase g-font-size-default g-color-white-opacity-0_5 g-letter-spacing-1 g-mb-5">Phone number</h3>
                   <strong class="g-font-size-default g-color-white">(585) 210-8425</strong>
                 </a>
-              </div>
+		</div>
 
               <div class="col-sm-6 col-md-3 g-brd-top g-brd-top-none g-brd-left--md g-brd-primary g-px-15 g-py-30 g-py-0--md">
                 <a class="g-font-size-default g-color-white" href="mailto:info@interlockroc.org">
