Lower-casing "please" after comma

--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@ Members often work in teams to complete their projects. If you have a project yo
 	    we welcome you to become involved in our community. 
 	    You do not have to pay dues to get involved with Interlock events and activities. 
 	    If you're interested in supporting Interlock by being a member,
-	    Please attend our weekly Tuesday meeting and speak to one of 
+	    please attend our weekly Tuesday meeting and speak to one of 
 	    our directors. You can also email them at <a href="mailto:info@interlockroc.org">info@interlockroc.org</a> if you have any questions.</p>
 
 
