https for freenode link
Switching the link to the IRC web client from http to https

--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@ Members often work in teams to complete their projects. If you have a project yo
               </div>
 
               <div class="col-sm-6 col-md-3 g-brd-top g-brd-top-none g-brd-left--md g-brd-primary g-px-15 g-py-30 g-py-0--md">
-                <a class="g-font-size-default g-color-white" href="http://webchat.freenode.net?channels=%23interlock&uio=d4">
+                <a class="g-font-size-default g-color-white" href="https://webchat.freenode.net?channels=%23interlock&uio=d4">
                   <i class="icon-speech d-inline-block g-font-size-50 g-color-primary g-mb-20"></i>
                   <h3 class="text-uppercase g-font-size-default g-color-white-opacity-0_5 g-letter-spacing-1 g-mb-5">IRC</h3>
                   <strong class="g-font-size-default g-color-white">freenode/#interlock</strong>
