--- a/index.html
+++ b/index.html
@@ -465,13 +465,13 @@ Members often work in teams to complete their projects. If you have a project yo
           <div class="container">
             <div class="row">
 
-              <div class="col-sm-5 col-md-3 g-px-15 g-py-30 g-py-0--md">
+              <!-- div class="col-sm-5 col-md-3 g-px-15 g-py-30 g-py-0--md">
                 <a class="g-font-size-default g-color-white" href="https://www.google.com/maps/place/Interlock+Rochester/@43.1614845,-77.5834106,19.25z/data=!4m5!3m4!1s0x89d6b5978d056919:0x45b15d4cc71182c1!8m2!3d43.1614494!4d-77.5834932">
                   <i class="icon-globe d-inline-block g-font-size-50 g-color-primary g-mb-20"></i>
                   <h3 class="text-uppercase g-font-size-default g-color-white-opacity-0_5 g-letter-spacing-1 g-mb-5">Address</h3>
 		  <strong class="g-font-size-default g-color-white">1115 E Main St, Door #7,<br/> Rochester, NY 14609</strong>
                 </a>
-              </div>
+              </div -->
 
              <div class="col-sm-6 col-md-3 g-brd-top g-brd-top-none g-brd-left--md g-brd-primary g-px-15 g-py-30 g-py-0--md">
                 <a class="g-font-size-default g-color-white" href="tel://5852108425">
