Removing the wiki link
Resolves https://github.com/Interlock-Rochester/interlock-rochester.github.io/issues/25

--- a/index.html
+++ b/index.html
@@ -99,10 +99,11 @@
 				  <!--<li class="nav-item g-mx-10--lg g-mx-15--xl g-mb-7 g-mb-0--lg">
                     <a href="blog/index.html" class="nav-link g-color-white p-0">Blog</a>
                   </li>-->
+			<!-- The wiki is dead. Long live the wiki.
 				  <li class="nav-item g-mx-10--lg g-mx-15--xl g-mb-7 g-mb-0--lg">
                     <a href="http://www.lugor.org/wiki/index.php/Main_Page" target="_blank" class="nav-link g-color-white p-0">Wiki</a>
                   </li>
-                  
+                  -->
 				  
                   <li class="nav-item g-ml-10--lg g-ml-15--xl">
                     <a href="#contact" class="nav-link g-color-white p-0">Contact</a>
